tests/errors/sem15.kt
fun foo(x: Int, x: Int) {} // duplicate param